@@ -97,6 +97,7 @@ ATTR_acluren,
 ATTR_acluser,
 ATTR_checkpoint_dir,
 ATTR_checkpoint_min,
+ATTR_checkpoint_defaults,
 ATTR_enable,
 ATTR_fromroute,
 ATTR_killdelay,
