@@ -458,6 +458,18 @@ attribute_def que_attr_def[] =
     ATR_TYPE_LONG,
     PARENT_TYPE_QUE_EXC
   },
+  /* QE_ATR_checkpoint_defaults */
+  {   ATTR_checkpoint_defaults,   /* "checkpoint_defaults" */
+      decode_str,
+      encode_str,
+      set_str,
+      comp_str,
+      free_str,
+      NULL_FUNC,
+      NO_USER_SET,
+      ATR_TYPE_STR,
+      PARENT_TYPE_QUE_EXC
+  },
   /* QE_ATR_RendezvousRetry */ /* Number times to retry sync of jobs */
   { "rendezvous_retry",
     decode_l,
